Add auto-fac to datalayer

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ PoorGuys/packages/
 PoorGuys/PoorGuys.WebApi/bin/
 PoorGuys/PoorGuys.WebApi/obj/
 PoorGuys/PoorGuys.DataAccess/obj/
+PoorGuys/PoorGuys.DataAccess/bin/
+PoorGuys/.vs/
