--- a/PoorGuys/PoorGuys.DataAccess/packages.config
+++ b/PoorGuys/PoorGuys.DataAccess/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.3.0" targetFramework="net452" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net452" />
@@ -17,6 +20,7 @@
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net452" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
